--- a/Hoodies.html
+++ b/Hoodies.html
@@ -53,7 +53,7 @@
           Category:-
         </div>
         <div class="panel-ops">
-          <a href="Black & White.html"><p>Home</p></a>
+          <a href="Index.html"><p>Home</p></a>
           <a href="Shoes.html"><p>Shoes</p></a>
           <a href="Watches.html"><p>Watches</p></a>
           <a href="Perfume.html"><p>Perfumes</p></a>
@@ -260,7 +260,7 @@
 
       <div class="foot-panel4">
         <div class="copyright">
-          &copy; 1996-2023, Amazon.com, Inc, or its affiliates
+          &copy; Since 2024, Black&WHite, Inc, or its affiliates
         </div>
       </div>
     </div>
