--- a/Watches.html
+++ b/Watches.html
@@ -53,7 +53,7 @@
           Category
         </div>
         <div class="panel-ops">
-          <a href="Black & White.html"><p>Home</p></a>
+          <a href="Index.html"><p>Home</p></a>
           <a href="Shoes.html"><p>Shoes</p></a>
           <a href="Watches.html"><p>Watches</p></a>
           <a href="Perfume.html"><p>Perfumes</p></a>
