--- a/Zara.html
+++ b/Zara.html
@@ -56,7 +56,12 @@
           Category
         </div>
         <div class="panel-ops">
-          <a href="Black & White.html" id="Hover"><p>Home</p></a>
+          <a
+            href="Index.html
+          "
+            id="Hover"
+            ><p>Home</p></a
+          >
           <a href="Shoes.html" id><p>Shoes</p></a>
           <a href="Watches.html"><p>Watches</p></a>
           <a href="Perfume.html"><p>Perfumes</p></a>
