--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="Main.css" />
-    <link rel="add-icon" href="logo.png" />
+    <link rel="add-icon" href="Logo.png" />
   </head>
   <body>
     <header>
